<?xml version="1.0"?>
<package format="2">
  <name>realsense_vslam</name>
  <version>0.0.0</version>
  <description>The realsense_vslam package</description>

    <author> mobin habibpour </author>
    <maintainer email="mobin.habibpour@gmail.com">mobin habibpour</maintainer>
    <license>todo</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  
  
</package>
